feat: add basic quantity functionality

--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -3,7 +3,7 @@
     height: auto;
     width: auto;
     padding: 0.5rem 2.375rem;
-    background-color: #FFC107;
+    background-color: var(--element-background);
     font-size: 1.25rem;
     font-weight: 700;
     border: none;
@@ -12,5 +12,5 @@
 }
 
 .button:hover {
-    background-color: #8B8B8B;
+    background-color: var(--secondary);
 }
