--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import './components/style.scss';
+@import './pages/style.scss';
 
 /* montserrat-regular - latin */
 @font-face {
@@ -65,6 +66,7 @@
     --amber: #FFC107;
     --black: #000000;
     --gray: #8B8B8B;
+    --california: #FF9507;
 
     /*Text*/
     --primary: var(--black);
@@ -73,9 +75,17 @@
     /*Elements*/
     --border-color: var(--amber);
     --element-background: var(--amber);
+    --element-hover: var(--california);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 body {
+    margin: 0;
     font-family: 'Montserrat';
 }
 
