fix: fix style path of nav card

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -2,4 +2,4 @@
 @import './quantity/style.scss';
 @import './header/style.scss';
 @import './accordeon/style.scss';
-@import './mainpage-card/style.scss';
+@import './navCard/style.scss';
