--- a/src/components/quantity/style.scss
+++ b/src/components/quantity/style.scss
@@ -1,8 +1,8 @@
 .fieldset {
     display: flex;
     gap: 0.75rem;
-    padding: 0.75rem 0 0 0;
-    margin: 0 0 1.55rem 0;
+    padding: 0;
+    margin: 0;
     border: 0 none;
 }
 
@@ -38,7 +38,7 @@
     font-size: 1.125rem;
     text-align: center;
     color: var(--secondary);
-    background-color: var(--background);
+    background-color: var(--element-background);
 }
 
 .quantity__btn:disabled {
@@ -47,6 +47,7 @@
 
 .quantity__btn:hover:not(:disabled) {
     border: 0.065rem solid var(--secondary);
+    background-color: var(--element-hover);
 }
 
 .quantity__btn::before,
