--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -3,3 +3,4 @@
 @import './header/style.scss';
 @import './accordeon/style.scss';
 @import './navCard/style.scss';
+@import './breadcrumbs/style.scss';
