--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -3,6 +3,14 @@
     &__container {
         padding: 20px 0;
         display: flex;
+
+        @media (max-width: 715px) {
+            flex-wrap: wrap;
+        }
+        @media (max-width: 400px) {
+            padding: 10px 0;
+            font-size: 13px;
+        }
     }
 }
 
