--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -18,6 +18,10 @@ a {
     color: #000;
     text-decoration: none;
 }
+
+.catalog-link:hover {
+    color: var(--element-hover);
+}
 .phone-link {
     display: flex;
     align-items: center;
