--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -4,8 +4,8 @@
     align-items: center;
     position: absolute;
     top: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%;
 }
 
 .modal-bg {
