--- a/src/pages/cart/style.scss
+++ b/src/pages/cart/style.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
+    gap: 10%;
 }
 
 .cart-title {
@@ -17,7 +18,8 @@
 }
 
 .cart-list {
-    max-width: 50%;
+    width: 50%;
+    min-width: 250px;
     padding: 0;
     border: 1px solid var(--secondary);
     border-radius: 30px;
@@ -28,20 +30,22 @@
     display: flex;
     justify-content: space-between;
     gap: 5px;
+    flex-wrap: wrap;
     height: 100%;
     width: 100%;
     padding: 10px 30px;
 }
 
 .item-img {
-    max-width: 100px;
-    max-height: 100px;
+    width: 100px;
+    height: 100px;
     object-fit: contain;
 }
 
 .item-info {
     display: flex;
     height: 100%;
+    width: 70%;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -69,8 +73,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 15px;
     width: 25%;
+    min-width: 200px;
 }
 
 .promocode {
@@ -111,4 +117,10 @@
     bottom: -100px;
     right: -90px;
     z-index: -1;
+}
+
+@media (max-width: 550px) {
+    .cart-cat-bg {
+        display: none;
+    }
 }
