feat: add fish data and error messages in modal form

--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -122,3 +122,8 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
+.error-span {
+    display: none;
+    color: red;
+}
